[gd_scene load_steps=8 format=3 uid="uid://cu53mr7jop5l5"]

[ext_resource type="Script" uid="uid://rkctf10ti0g2" path="res://mini_games/snake_eyes/dice_game.gd" id="1_rsba8"]
[ext_resource type="Texture2D" uid="uid://dhqg8g8nq121l" path="res://assets/dice/table.png" id="2_gdh0p"]
[ext_resource type="PackedScene" uid="uid://bokxys77740c3" path="res://mini_games/snake_eyes/Dice.tscn" id="3_iwtdq"]
[ext_resource type="PackedScene" uid="uid://cdkt2fgsqb1ef" path="res://main_menu/main_menu_nodes/MoneyDisplay.tscn" id="5_moon8"]
[ext_resource type="PackedScene" uid="uid://4k7jspicg8w0" path="res://ui/FadingText.tscn" id="6_ja832"]
[ext_resource type="PackedScene" uid="uid://c71oq4go8g007" path="res://mini_games/snake_eyes/MoneyAmount.tscn" id="7_ft5tw"]
[ext_resource type="PackedScene" uid="uid://53yhdre5wemc" path="res://mini_games/snake_eyes/Roll.tscn" id="9_12iu1"]

[node name="DiceGame" type="Node2D"]
script = ExtResource("1_rsba8")

[node name="Button" parent="." instance=ExtResource("9_12iu1")]
position = Vector2(616.5, 512.345)

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(544.5, 261.345)
scale = Vector2(15.47, 10.4469)
texture = ExtResource("2_gdh0p")

[node name="Dice" parent="." instance=ExtResource("3_iwtdq")]
position = Vector2(278.5, 65.345)

[node name="MoneyDisplay" parent="." instance=ExtResource("5_moon8")]
position = Vector2(245, 579)
scale = Vector2(0.36, 0.36)

[node name="FadingText" parent="." instance=ExtResource("6_ja832")]
position = Vector2(483, 569)

[node name="MoneyAmount" parent="." instance=ExtResource("7_ft5tw")]
offset_left = 592.0
offset_top = 281.0
offset_right = 592.0
offset_bottom = 281.0

[node name="SnakeEyes" type="Label" parent="."]
offset_left = 557.0
offset_top = 186.0
offset_right = 707.0
offset_bottom = 225.083
theme_override_colors/font_color = Color(0.360784, 0.298039, 0.690196, 1)
theme_override_font_sizes/font_size = 28
text = "Snake Eyes"

[connection signal="roll_dice" from="Button" to="." method="_on_button_roll_dice"]
[connection signal="dice_game_lost" from="Dice" to="." method="_on_dice_dice_game_lost"]
[connection signal="dice_game_lost" from="Dice" to="Button" method="_on_dice_dice_game_lost"]
[connection signal="snake_eyes" from="Dice" to="." method="_on_dice_snake_eyes"]
[connection signal="snake_eyes" from="Dice" to="Button" method="_on_dice_snake_eyes"]
